LIVIJUKU-679 - tunnusluku näyttöjen ui-route-tilojen refaktorointi. Tunnuslukunäytöt ovat oma kokonaisuutensa eivätkö ole enää hakijan tilojen alla.

--- a/app/scripts/components/header/index.html
+++ b/app/scripts/components/header/index.html
@@ -38,7 +38,7 @@
           </a>
         </li>
         <li
-          class="header__button {{ 'app.hakija.tunnusluku' | includedByState | toClass:'is-active' }}"
+          class="header__button {{ 'app.tunnusluku' | includedByState | toClass:'is-active' }}"
           ng-show="sallittu(user, 'view-hakemuskausi')">
           <juku-statistic-dropdown user="user"></juku-statistic-dropdown>
         </li>
