--- a/app/scripts/components/sidebar/index.html
+++ b/app/scripts/components/sidebar/index.html
@@ -19,12 +19,12 @@
   <ul ng-show="sallittu(user, 'view-hakemuskausi')">
     <li ng-show="sallittu(user, 'view-hakemuskausi')">Tunnusluvut</li>
     <li ng-show="sallittu(user, 'view-hakemuskausi')">
-      <a ui-sref-active="is-active" ui-sref="app.hakija.tunnusluku.syottaminen()">
+      <a ui-sref-active="is-active" ui-sref="app.tunnusluku.syottaminen()">
         Tunnuslukujen syöttäminen
       </a>
     </li>
     <li ng-show="sallittu(user, 'view-hakemuskausi')">
-      <a ui-sref-active="is-active" ui-sref="app.hakija.tunnusluku.raportit()">
+      <a ui-sref-active="is-active" ui-sref="app.tunnusluku.raportit()">
         Tunnuslukuraportit
       </a>
     </li>
