--- a/app/scripts/components/statisticDropdown/index.html
+++ b/app/scripts/components/statisticDropdown/index.html
@@ -7,22 +7,22 @@
   <div class="dropdown-menu-container">
     <ul class="dropdown-menu">
       <li>
-        <a ui-sref-active="is-active" ui-sref="app.hakija.tunnusluku.syottaminen()">
+        <a ui-sref-active="is-active" ui-sref="app.tunnusluku.syottaminen()">
           Tunnuslukujen syöttäminen
         </a>
       </li>
       <li>
-        <a ui-sref-active="is-active" ui-sref="app.hakija.tunnusluku.valtionavustuskuvaajat()">
+        <a ui-sref-active="is-active" ui-sref="app.tunnusluku.valtionavustuskuvaajat()">
           Valtionavustuskuvaajat
         </a>
       </li>
       <li>
-        <a ui-sref-active="is-active" ui-sref="app.hakija.tunnusluku.tunnuslukukuvaajat()">
+        <a ui-sref-active="is-active" ui-sref="app.tunnusluku.tunnuslukukuvaajat()">
           Tunnuslukukuvaajat
         </a>
       </li>
       <li>
-        <a ui-sref-active="is-active" ui-sref="app.hakija.tunnusluku.omakuvaaja()">
+        <a ui-sref-active="is-active" ui-sref="app.tunnusluku.omakuvaaja()">
           Oma kuvaaja tunnusluvuista
         </a>
       </li>
