LIVIJUKU-679 - tunnusluvut näkyvät kaikille jukun käyttäjille.

--- a/app/scripts/components/header/index.html
+++ b/app/scripts/components/header/index.html
@@ -38,8 +38,7 @@
           </a>
         </li>
         <li
-          class="header__button {{ 'app.tunnusluku' | includedByState | toClass:'is-active' }}"
-          ng-show="sallittu(user, 'view-hakemuskausi')">
+          class="header__button {{ 'app.tunnusluku' | includedByState | toClass:'is-active' }}">
           <juku-statistic-dropdown user="user"></juku-statistic-dropdown>
         </li>
       </ul>
