LIVIJUKU-664: Turha "please fill out this field", kun lisää uutta kehittämishanketta ELY-hakemukseen

--- a/app/scripts/views/hakemus/index.html
+++ b/app/scripts/views/hakemus/index.html
@@ -25,7 +25,7 @@
       </juku-tab>
     </juku-tabs>
   </juku-navigation>
-  <juku-form name="hakemusForm" juku-poistumisvaroitus="{{hakemusKeskenerainen()}}">
+  <juku-form name="hakemusForm" juku-poistumisvaroitus="{{hakemusKeskenerainen()}}" novalidate>
     <h1>Joukkoliikenteen {{hakemus.hakemustyyppitunnus | toApplicationName}} {{hakemus.vuosi}}</h1>
 
     <!-- Käsittelijä -->
