LIVIJUKU-679 - tunnusluku pääformi jossa on päällä novalidate

--- a/app/scripts/views/tunnusluvut/muokkaus.html
+++ b/app/scripts/views/tunnusluvut/muokkaus.html
@@ -40,7 +40,7 @@
       </juku-tab>
     </juku-tabs>
   </juku-navigation>
-  <div ui-view></div>
+  <form name="tunnusluvut" novalidate><div ui-view></div></form>
   <juku-controls >
     <juku-controls-buttons>
       <button class="btn btn-success">Tallenna näytöllä olevat tiedot</button>
