LIVIJUKU-679 - tunnuslukutyypit laitettu tiloihin explisiittisesti

--- a/app/scripts/views/tunnusluvut/muokkaus.html
+++ b/app/scripts/views/tunnusluvut/muokkaus.html
@@ -15,7 +15,7 @@
       <div class="col-md-2 form-group">
         <label for="vuosi" class="sr-only">Vuosi</label>
         <select id="vuosi" name="vuosi"
-                ng-model="selectedVuosi" ng-disabled="isReadonly()"
+                ng-model="vuosi" ng-disabled="isReadonly()"
                 placeholder="Valitse vuosi" class="form-control" required>
           <option value="" selected disabled>Valitse vuosi</option>
           <option value="2012">2012</option>
