LIVIJUKU-676: Tabeihin hover-tyyli (a:hover {background-color: #bbb;} ks. kuvan animaatio

--- a/app/scripts/components/tab/index.styl
+++ b/app/scripts/components/tab/index.styl
@@ -9,6 +9,7 @@
   cursor: pointer
   &:hover
     color: #fff
+    background-color: #bbb
     text-decoration: none
   &:last-child
     margin-right 0
