--- a/app/scripts/views/tunnusluvut/muokkaus-psab.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-psab.html
@@ -8,7 +8,7 @@
     </uib-progressbar>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-liikenteen-kysynta-tarjonta tyyppi="PSAB"></juku-tunnusluvut-liikenteen-kysynta-tarjonta>
+    <juku-tunnusluvut-liikenteen-kysynta-tarjonta tyyppi="PSAB" tunnusluvut="tunnusluvut.liikennetilasto"></juku-tunnusluvut-liikenteen-kysynta-tarjonta>
   </juku-form-row>
   <juku-form-row>
     <juku-tunnusluvut-kalusto></juku-tunnusluvut-kalusto>
