--- a/app/scripts/views/tunnusluvut/muokkaus.html
+++ b/app/scripts/views/tunnusluvut/muokkaus.html
@@ -49,8 +49,8 @@
     </juku-controls>
   </form>
   <br/>
-  <div class="alert alert-info">
-    <p ng-hide="tunnusluvut">
+  <div class="alert alert-info" ng-hide="tunnusluvut">
+    <p>
       <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
       Valitse alue ja vuosiluku
     </p>
