LIVIJUKU-679 - kysynnän ja tarjonnan vuositilastojen haku/tallennus toimii tunnuslukujen syöttönäytöltä (1. versio)

--- a/app/scripts/views/tunnusluvut/muokkaus.html
+++ b/app/scripts/views/tunnusluvut/muokkaus.html
@@ -40,11 +40,11 @@
       </juku-tab>
     </juku-tabs>
   </juku-navigation>
-  <form name="tunnusluvutForm" novalidate ng-show="tunnusluvut">
+  <form name="tunnusluvutForm" novalidate ng-if="tunnusluvut">
     <div ui-view></div>
     <juku-controls >
       <juku-controls-buttons>
-        <button class="btn btn-success">Tallenna näytöllä olevat tiedot</button>
+        <button class="btn btn-success" data-ng-click="tallennaHakemus()">Tallenna näytöllä olevat tiedot</button>
       </juku-controls-buttons>
     </juku-controls>
   </form>
