LIVIJUKU-679 - kysynnän ja tarjonnan vuositilastojen haku/tallennus toimii tunnuslukujen syöttönäytöltä (1. versio)

--- a/app/scripts/components/tunnusluvut/liikenteenKysyntaTarjonta/index.html
+++ b/app/scripts/components/tunnusluvut/liikenteenKysyntaTarjonta/index.html
@@ -80,7 +80,7 @@
                        placeholder="Nousua/kuukausi" noenter
                        type="number" numeric-integer-only="" select-on-click
                        ng-readonly="isReadonly()"
-                       ng-model="tunnusluku.nousua">
+                       ng-model="tunnusluku.nousut">
               </form-group-compact>
             </td>
             <td>
@@ -100,7 +100,7 @@
                        required
                        currency-symbol="" noenter
                        select-on-click
-                       ng-model="tunnusluku.vuorotarjonta">
+                       ng-model="tunnusluku.lahdot">
               </form-group-compact>
             </td>
           </tr>
