LIVIJUKU-661: Seurantatietolomakkeen tyylien viilaus

--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -35,6 +35,7 @@
 @import '../scripts/components/statisticDropdown'
 @import '../scripts/components/controls'
 @import '../scripts/components/navigationLinks'
+@import '../scripts/components/seuranta/liikenne'
 @import '../scripts/components/tunnusluvut/liikenteenKysyntaTarjonta'
 @import '../scripts/components/tunnusluvut/kalusto'
 @import '../scripts/components/tunnusluvut/lipputulot'
