--- a/app/scripts/components/seuranta/liikenne/index.html
+++ b/app/scripts/components/seuranta/liikenne/index.html
@@ -1,4 +1,4 @@
-<ng-form id="{{liikennetyyppi + '-liikennesuoritteet-form'}}" name="suoritteetForm">
+<ng-form id="{{liikennetyyppi + '-liikennesuoritteet-form'}}" name="suoritteetForm" class="liikenne">
   <div class="table-responsive">
     <table class="table table-hover table-condensed">
       <thead>
