--- a/app/scripts/views/tunnusluvut/muokkaus-psak.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-psak.html
@@ -8,7 +8,7 @@
     </uib-progressbar>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-liikenteen-kysynta-tarjonta tyyppi="PSAK"></juku-tunnusluvut-liikenteen-kysynta-tarjonta>
+    <juku-tunnusluvut-liikenteen-kysynta-tarjonta tyyppi="PSAK" tunnusluvut="tunnusluvut.liikennevuosi"></juku-tunnusluvut-liikenteen-kysynta-tarjonta>
   </juku-form-row>
   <juku-form-row>
     <juku-tunnusluvut-kalusto></juku-tunnusluvut-kalusto>
