--- a/app/scripts/components/tunnusluvut/tarjouskilpailut/index.html
+++ b/app/scripts/components/tunnusluvut/tarjouskilpailut/index.html
@@ -1,8 +1,8 @@
 <ng-form id="tarjouskilpailutForm" name="tarjouskilpailutForm" class="tarjouskilpailut">
-  <juku-form-row ng-if="tyyppi==='PSAB' || tyyppi==='PSAK'">
+  <juku-form-row ng-if="tyyppi==='BR' || tyyppi==='KOS'">
     <h3>Tarjouskilpailut</h3>
-    <p ng-if="tyyppi==='PSAB'">Bruttoliikenteen tarjouskilpailut</p>
-    <p ng-if="tyyppi==='PSAK'">Käyttöoikeussopimusliikenteen tarjouskilpailut</p>
+    <p ng-if="tyyppi==='BR'">Bruttoliikenteen tarjouskilpailut</p>
+    <p ng-if="tyyppi==='KOS'">Käyttöoikeussopimusliikenteen tarjouskilpailut</p>
     <div class="table-responsive">
       <table class="table table-hover table-condensed">
         <tr>
