--- a/app/scripts/views/tunnusluvut/muokkaus-psak.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-psak.html
@@ -8,19 +8,19 @@
     </uib-progressbar>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-liikenteen-kysynta-tarjonta tyyppi="PSAK" tunnusluvut="tunnusluvut.liikennevuosi"></juku-tunnusluvut-liikenteen-kysynta-tarjonta>
+    <juku-tunnusluvut-liikenteen-kysynta-tarjonta tyyppi="KOS" tunnusluvut="tunnusluvut.liikennevuosi"></juku-tunnusluvut-liikenteen-kysynta-tarjonta>
   </juku-form-row>
   <juku-form-row>
     <juku-tunnusluvut-kalusto></juku-tunnusluvut-kalusto>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-liikennointikorvaukset tyyppi="PSAK"></juku-tunnusluvut-liikennointikorvaukset>
+    <juku-tunnusluvut-liikennointikorvaukset tyyppi="KOS"></juku-tunnusluvut-liikennointikorvaukset>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-lipputulot tyyppi="PSAK"></juku-tunnusluvut-lipputulot>
+    <juku-tunnusluvut-lipputulot tyyppi="KOS"></juku-tunnusluvut-lipputulot>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-tarjouskilpailut tyyppi="PSAK"></juku-tunnusluvut-tarjouskilpailut>
+    <juku-tunnusluvut-tarjouskilpailut tyyppi="KOS"></juku-tunnusluvut-tarjouskilpailut>
   </juku-form-row>
   <juku-form-row>
     <juku-tunnusluvut-lisatiedot lisatiedot="taustatiedot.lisatiedot"></juku-tunnusluvut-lisatiedot>
