--- a/app/scripts/components/tunnusluvut/lipputulot/index.html
+++ b/app/scripts/components/tunnusluvut/lipputulot/index.html
@@ -1,5 +1,5 @@
 <ng-form id="lipputulotForm" name="lipputulotForm" class="lipputulot">
-  <juku-form-row ng-if="tyyppi==='PSAB' || tyyppi==='PSAK'">
+  <juku-form-row ng-if="tyyppi==='BR' || tyyppi==='KOS'">
     <h3>Lipputulot</h3>
     <div class="table-responsive">
       <table class="table table-hover table-condensed">
