--- a/app/scripts/views/tunnusluvut/muokkaus-psab.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-psab.html
@@ -8,19 +8,19 @@
     </uib-progressbar>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-liikenteen-kysynta-tarjonta tyyppi="PSAB" tunnusluvut="tunnusluvut.liikennevuosi"></juku-tunnusluvut-liikenteen-kysynta-tarjonta>
+    <juku-tunnusluvut-liikenteen-kysynta-tarjonta tyyppi="BR" tunnusluvut="tunnusluvut.liikennevuosi"></juku-tunnusluvut-liikenteen-kysynta-tarjonta>
   </juku-form-row>
   <juku-form-row>
     <juku-tunnusluvut-kalusto></juku-tunnusluvut-kalusto>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-liikennointikorvaukset tyyppi="PSAB"></juku-tunnusluvut-liikennointikorvaukset>
+    <juku-tunnusluvut-liikennointikorvaukset tyyppi="BR"></juku-tunnusluvut-liikennointikorvaukset>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-lipputulot tyyppi="PSAB"></juku-tunnusluvut-lipputulot>
+    <juku-tunnusluvut-lipputulot tyyppi="BR"></juku-tunnusluvut-lipputulot>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-tarjouskilpailut tyyppi="PSAB"></juku-tunnusluvut-tarjouskilpailut>
+    <juku-tunnusluvut-tarjouskilpailut tyyppi="BR"></juku-tunnusluvut-tarjouskilpailut>
   </juku-form-row>
   <juku-form-row>
     <juku-tunnusluvut-lisatiedot lisatiedot="taustatiedot.lisatiedot"></juku-tunnusluvut-lisatiedot>
