--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -303,7 +303,14 @@ textarea
 .notbold
   font-weight:normal
 
-
 .korostus
   border: 1px solid #ccc
   padding: 10px
+
+.accordionnopadding
+  .panel-heading
+    padding: 10px 5px;
+  .panel-body
+    padding: 0px
+    padding-top: 5px
+
